objects/Account.object
<CustomObject>
    <fields>
        <fullName>CAD_System__c</fullName>
        <label>CAD System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aegis</fullName>
                </value>
                <value>
                    <fullName>Central Square</fullName>
                </value>
                <value>
                    <fullName>Cleric</fullName>
                </value>
                <value>
                    <fullName>CTS America</fullName>
                </value>
                <value>
                    <fullName>Enroute 911</fullName>
                </value>
                <value>
                    <fullName>Flight Vector</fullName>
                </value>
                <value>
                    <fullName>Golden Hour</fullName>
                </value>
                <value>
                    <fullName>Hexagon</fullName>
                </value>
                <value>
                    <fullName>HSI</fullName>
                </value>
                <value>
                    <fullName>InterAct</fullName>
                </value>
                <value>
                    <fullName>Jefbar - ESO</fullName>
                </value>
                <value>
                    <fullName>Medapoint - AdvanceDispatch</fullName>
                </value>
                <value>
                    <fullName>Medical Dispatch</fullName>
                </value>
                <value>
                    <fullName>MIS</fullName>
                </value>
                <value>
                    <fullName>Motorola Premier One</fullName>
                </value>
                <value>
                    <fullName>Motorola Printrak</fullName>
                </value>
                <value>
                    <fullName>New World</fullName>
                </value>
                <value>
                    <fullName>Northrup Grumman - CommandPoint</fullName>
                </value>
                <value>
                    <fullName>Orion</fullName>
                </value>
                <value>
                    <fullName>Ortvis</fullName>
                </value>
                <value>
                    <fullName>OSSI</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Pro Phoenix</fullName>
                </value>
                <value>
                    <fullName>Rickshaw TMS</fullName>
                </value>
                <value>
                    <fullName>Southern Software</fullName>
                </value>
                <value>
                    <fullName>Spillman</fullName>
                </value>
                <value>
                    <fullName>Sunguard</fullName>
                </value>
                <value>
                    <fullName>SweetSoft</fullName>
                </value>
                <value>
                    <fullName>Tiburon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRNA_Count__c</fullName>
        <inlineHelpText>Number of Certified Registered Nurse Anesthetists at this facility or practice</inlineHelpText>
        <label>CRNA Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Status__c</fullName>
        <label>Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contacted - Not Interested</fullName>
                </value>
                <value>
                    <fullName>Contacted - Call Back</fullName>
                </value>
                <value>
                    <fullName>Contacted - Meeting Scheduled</fullName>
                </value>
                <value>
                    <fullName>Call Attempted</fullName>
                </value>
                <value>
                    <fullName>Attempted - Corporate Decision</fullName>
                </value>
                <value>
                    <fullName>Attempted - Left Message</fullName>
                </value>
                <value>
                    <fullName>Attempted - Incorrect Name</fullName>
                </value>
                <value>
                    <fullName>Attempted - Incorrect Number</fullName>
                </value>
                <value>
                    <fullName>Attempted - Do Not Call</fullName>
                </value>
                <value>
                    <fullName>Not Contacted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If a client can be referenced, check this box</inlineHelpText>
        <label>Client Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Testimonial_on_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Testimonial on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Oppties__c</fullName>
        <inlineHelpText>Number of Closed Won opportunities for this account</inlineHelpText>
        <label># Closed Won Oppties</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Competitor_Category__c</fullName>
        <label>Competitor Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Modular - PAS</fullName>
                </value>
                <value>
                    <fullName>Modular - RCS</fullName>
                </value>
                <value>
                    <fullName>Modular - HA</fullName>
                </value>
                <value>
                    <fullName>Modular - HY</fullName>
                </value>
                <value>
                    <fullName>Modular - HE</fullName>
                </value>
                <value>
                    <fullName>Modular - PE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Driven_Expire_Date__c</fullName>
        <label>Contract Driven Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Autorenewal_Date__c</fullName>
        <label>Contract Expiration/Autorenewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Expire_Date_MAX__c</fullName>
        <label>Contract Expire Date (MAX)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <inlineHelpText>Notes about the term of the contract.  Include length of initial contract and any specified renewal.</inlineHelpText>
        <label>Contract Term</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Converted_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corrected_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corrected Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsPp0r</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountCompetitive__c</fullName>
        <label>CountCompetitive</label>
        <summaryForeignKey>Competitive_Info__c.Related_To__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountEntOpps__c</fullName>
        <description>count Enterprise Opps - so Lead associated with Account can be flagged as owned by Enterprise</description>
        <label>CountEntOpps</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>1-Discover, 2-Qualify, 3-Execute, 4-Propose, 5-Close</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Enterprise</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountSolPort__c</fullName>
        <label>CountSolPort</label>
        <summaryForeignKey>SolPort__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_All_Accounts__c</fullName>
        <label>Count All Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_All_Child_Accounts__c</fullName>
        <formula>Count_Child_Accounts__c + Count_All_Accounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count All Child Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Child_Accounts__c</fullName>
        <label>Count Child Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Current_Contracts__c</fullName>
        <description>field used by Rollup Helper to count current contacts</description>
        <label>Count Current Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Hierarchy_Opps__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Rollup helper - counts opportunities below the account, all child accounts.  Does not include opps at current account level.</description>
        <inlineHelpText>How many open opportunities are below this account looking at all children, grandchildren, etc?</inlineHelpText>
        <label>Count Hierarchy Opps Below</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Related_Contacts__c</fullName>
        <label>Count Related Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Related_Leads__c</fullName>
        <label>Count Related Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_All_Opportunities__c</fullName>
        <label>Count of All Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Open_Pipeline_Opps__c</fullName>
        <description>Summary Count of All Open Opps in Pipeline, excludes Target stage</description>
        <label>Count of Open Pipeline Opps</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notContain</operation>
            <value>Target</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Critical_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Critical Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_EMR__c</fullName>
        <label>Current EMR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DrChrono</fullName>
                </value>
                <value>
                    <fullName>MediSoft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Hospitalist_Group__c</fullName>
        <label>Current Hospitalist Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_MDT__c</fullName>
        <label>Current MDT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Garmin</fullName>
                </value>
                <value>
                    <fullName>Intermedix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Category__c</fullName>
        <label>Customer Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Customer_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Focus_Area__c</fullName>
        <label>Customer Solutions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E2E-CO</fullName>
                </value>
                <value>
                    <fullName>E2E-FULL</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>EMS-ASPP</fullName>
                </value>
                <value>
                    <fullName>EMS-RCM</fullName>
                </value>
                <value>
                    <fullName>HB</fullName>
                </value>
                <value>
                    <fullName>HB-AN-COD</fullName>
                </value>
                <value>
                    <fullName>HB-AN-PM</fullName>
                </value>
                <value>
                    <fullName>HB-AN-RCM</fullName>
                </value>
                <value>
                    <fullName>HB-COD</fullName>
                </value>
                <value>
                    <fullName>HB-ED-COD</fullName>
                </value>
                <value>
                    <fullName>HB-ED-PM</fullName>
                </value>
                <value>
                    <fullName>HB-ED-RCM</fullName>
                </value>
                <value>
                    <fullName>HB-PM</fullName>
                </value>
                <value>
                    <fullName>HB-RCM</fullName>
                </value>
                <value>
                    <fullName>MOD-BO</fullName>
                </value>
                <value>
                    <fullName>MOD-CLIN</fullName>
                </value>
                <value>
                    <fullName>MOD-COD</fullName>
                </value>
                <value>
                    <fullName>MOD-PE</fullName>
                </value>
                <value>
                    <fullName>MOD-PET</fullName>
                </value>
                <value>
                    <fullName>MOD-DS</fullName>
                </value>
                <value>
                    <fullName>MOD-PAS</fullName>
                </value>
                <value>
                    <fullName>MOD-RIS</fullName>
                </value>
                <value>
                    <fullName>OB</fullName>
                </value>
                <value>
                    <fullName>OB-PM</fullName>
                </value>
                <value>
                    <fullName>OB-RCM</fullName>
                </value>
                <value>
                    <fullName>OPT</fullName>
                </value>
                <value>
                    <fullName>OPT-L</fullName>
                </value>
                <value>
                    <fullName>OPT-MA</fullName>
                </value>
                <value>
                    <fullName>OPT-P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DHCMain_Specialty_Of_The_Physician_Group__c</fullName>
        <label>DHC Main Specialty Of Physician Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DHC_Academic_Medical_Center__c</fullName>
        <description>"AcaMedCtr" or null</description>
        <label>DHC Academic Medical Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Current_Ratio__c</fullName>
        <label>DHC Current Ratio</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DHC_Days_Sales_Outstanding__c</fullName>
        <label>DHC Days Sales Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DHC_Estimated_ER_Visits__c</fullName>
        <description>TotErVisits</description>
        <label>DHC Estimated ER Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DHC_Fiscal_Year_End__c</fullName>
        <label>DHC Fiscal Year End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_NetOperatingMargin__c</fullName>
        <label>DHC Net Operating Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DHC_Other_Specialties_In_The_Physician_G__c</fullName>
        <label>DHC Other Specialties In The Phy Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DHC_Patient_Accounting_Software__c</fullName>
        <description>DHC Patient Accounting Software (includes vendor and application where applicable)</description>
        <label>DHC Patient Accounting Software</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Practice_Management_Vendor__c</fullName>
        <description>DHC Practice Management Vendor</description>
        <label>DHC Practice Management Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Revenue_Cycle_Management_Software_i__c</fullName>
        <description>DHC Revenue Cycle Management Software (includes vendor and application where applicable)</description>
        <label>DHC Revenue Cycle Management Software</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedupe_Set__c</fullName>
        <label>Dedupe Set</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use</fullName>
                    <default>true</default>
                    <label>Use</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Ignore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefHC_CleansedName__c</fullName>
        <formula>trim(left(texcellency__DefHC_Hospital_Name__c,IF(FIND("(",texcellency__DefHC_Hospital_Name__c,1)&gt;0,FIND("(",texcellency__DefHC_Hospital_Name__c,1)-1,len(texcellency__DefHC_Hospital_Name__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DefHC_CleansedName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Notes__c</fullName>
        <label>Description Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Directory_Code__c</fullName>
        <inlineHelpText>Hospital Directory Code number</inlineHelpText>
        <label>Directory Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Source__c</fullName>
        <label>Discovery Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <formula>if(find("/",substitute(SUBSTITUTE(SUBSTITUTE(Website, "http://", ""),"https://",""),"www.",""),1)&gt;1,
mid(substitute(SUBSTITUTE(SUBSTITUTE(Website, "http://", ""),"https://",""),"www.",""),1,find("/",substitute(SUBSTITUTE(SUBSTITUTE(Website, "http://", ""),"https://",""),"www.",""),1)-1),
substitute(SUBSTITUTE(SUBSTITUTE(Website, "http://", ""),"https://",""),"www.",""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2E_Current_Vendor__c</fullName>
        <label>E2E Current Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>R1</fullName>
                </value>
                <value>
                    <fullName>Conifer</fullName>
                </value>
                <value>
                    <fullName>Ensemble</fullName>
                </value>
                <value>
                    <fullName>Navigant</fullName>
                </value>
                <value>
                    <fullName>NTrirve</fullName>
                </value>
                <value>
                    <fullName>Optum</fullName>
                </value>
                <value>
                    <fullName>Parallon</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E2E_List__c</fullName>
        <formula>OR(includes(Customer_Focus_Area__c,"E2E-CO"),includes(Customer_Focus_Area__c,"E2E-FULL"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E2E List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ED_Client_Code__c</fullName>
        <label>ED Client Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ED_Client_Service_Mgr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ED Client Service Mgr</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Physician</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ED_Current_Billing_Company__c</fullName>
        <inlineHelpText>Current billing company for the hospital</inlineHelpText>
        <label>ED Current Billing Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>360 Medical Billing Solutions</fullName>
                </value>
                <value>
                    <fullName>ABEO</fullName>
                </value>
                <value>
                    <fullName>Accumed</fullName>
                </value>
                <value>
                    <fullName>Advanced Health Partners/MediCom/MedExcel</fullName>
                </value>
                <value>
                    <fullName>AdvantEdge Health Solutions/Medrium/Professional</fullName>
                </value>
                <value>
                    <fullName>American Physician Partners</fullName>
                </value>
                <value>
                    <fullName>Applied Medical Systems/Fast Charts</fullName>
                </value>
                <value>
                    <fullName>ART/Applied Reimbursement Techniques/bankrupt</fullName>
                </value>
                <value>
                    <fullName>Asterino &amp; Associates/ revMD</fullName>
                </value>
                <value>
                    <fullName>Athena Health</fullName>
                </value>
                <value>
                    <fullName>Beacon Medical Services</fullName>
                </value>
                <value>
                    <fullName>Bravo Reimbursement Specialists* (EMA)/ Emcare</fullName>
                </value>
                <value>
                    <fullName>CIPROMS/Central Indiana Professional Management</fullName>
                </value>
                <value>
                    <fullName>CIPROMS South</fullName>
                </value>
                <value>
                    <fullName>Comprehensive Professional Reimbursement (CPR)</fullName>
                </value>
                <value>
                    <fullName>CPSI</fullName>
                </value>
                <value>
                    <fullName>Doctors ER Services (defunct)</fullName>
                </value>
                <value>
                    <fullName>DST Health Solutions (DST Systems, Inc.)</fullName>
                </value>
                <value>
                    <fullName>DuvaSawko Inc.</fullName>
                </value>
                <value>
                    <fullName>Ebix Inc.</fullName>
                </value>
                <value>
                    <fullName>EMBCC (Schumacher)</fullName>
                </value>
                <value>
                    <fullName>E-Medex</fullName>
                </value>
                <value>
                    <fullName>Emergency Groups Office (EGO)</fullName>
                </value>
                <value>
                    <fullName>Emergency Resource Management, Inc./ERMI</fullName>
                </value>
                <value>
                    <fullName>Emergent</fullName>
                </value>
                <value>
                    <fullName>EM Strategies</fullName>
                </value>
                <value>
                    <fullName>Endeavor Medical Systems</fullName>
                </value>
                <value>
                    <fullName>Essential Billing Strategies, Inc (EBS)</fullName>
                </value>
                <value>
                    <fullName>Etransmedia/Mediclaim/Medistar</fullName>
                </value>
                <value>
                    <fullName>Financial Medical Systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ED_Current_Hospitalist_Billing_Company__c</fullName>
        <label>ED Current Hospitalist Billing Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>360 Medical Billing Solutions</fullName>
                </value>
                <value>
                    <fullName>ART Medical Management</fullName>
                </value>
                <value>
                    <fullName>Asterino &amp; Associates</fullName>
                </value>
                <value>
                    <fullName>Athena</fullName>
                </value>
                <value>
                    <fullName>Beacon Medical Services</fullName>
                </value>
                <value>
                    <fullName>Bravo Reimbursement Specialists - EMA</fullName>
                </value>
                <value>
                    <fullName>CPSI</fullName>
                </value>
                <value>
                    <fullName>DST Health Solutions</fullName>
                </value>
                <value>
                    <fullName>DuvaSawko Inc.</fullName>
                </value>
                <value>
                    <fullName>Ebix Inc.</fullName>
                </value>
                <value>
                    <fullName>EMBCC (Schumacher)</fullName>
                </value>
                <value>
                    <fullName>E-Medex</fullName>
                </value>
                <value>
                    <fullName>Emergency Groups Office (EGO)</fullName>
                </value>
                <value>
                    <fullName>Emergency Resource Management, Inc.</fullName>
                </value>
                <value>
                    <fullName>Essential Billing Strategies, Inc (EBS)</fullName>
                </value>
                <value>
                    <fullName>Horizon Billing Specialists</fullName>
                </value>
                <value>
                    <fullName>In-house / Group</fullName>
                </value>
                <value>
                    <fullName>In-house / Hospital</fullName>
                </value>
                <value>
                    <fullName>Innovative Health Solutions</fullName>
                </value>
                <value>
                    <fullName>Insurance Data Services, Inc. (IDS)</fullName>
                </value>
                <value>
                    <fullName>Intermedix</fullName>
                </value>
                <value>
                    <fullName>LogixHealth</fullName>
                </value>
                <value>
                    <fullName>Martin Gottlieb and Associates (MGA)</fullName>
                </value>
                <value>
                    <fullName>MBI Solutions - Premier Physician Services</fullName>
                </value>
                <value>
                    <fullName>McKesson</fullName>
                </value>
                <value>
                    <fullName>MedAmerica - CEP America</fullName>
                </value>
                <value>
                    <fullName>MedData</fullName>
                </value>
                <value>
                    <fullName>Medical Management Resources - Team Health (TH)</fullName>
                </value>
                <value>
                    <fullName>Medical Management Specialists (MMS)</fullName>
                </value>
                <value>
                    <fullName>Mediserv</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ED_Customer__c</fullName>
        <formula>IF( NOT(INCLUDES( ED__c , "Prospect")),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ED Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED_Hospitalist_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ED Hospitalist Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (ED Hospitalist Group)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ED_ID__c</fullName>
        <label>ED ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>